# SCPWorldVisual

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md
.github/skills/grill-me/: SKILL.md
backend/: .gcloudignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/core/: database.py  personas.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py  session.py
backend/app/routers/: auth.py  chat.py  health.py  personas.py
backend/app/services/: embedding_service.py  llm_service.py  memory_service.py  prompt_service.py  rag_service.py  response_filter.py  storage_service.py
backend/tests/: test_auth.py  test_llm_service.py  test_memory_service.py  test_prompt_service.py  test_rag_service.py  test_response_filter.py  test_sqlite_storage.py
data-pipeline/: Dockerfile  pyproject.toml
data-pipeline/config/: scp_target_list.json
data-pipeline/scripts/: preprocess.py  scrape_scp.py  upload_to_sqlite.py
docs/: PORTFOLIO.md  architecture.md  deployment.md  frontend.md  screens.md
docs/archive/: README.md  README_20260416.md  architecture_comparison.md  implementation_plan.md  walkthrough_gke.md
docs/superpowers/plans/: 2026-06-10-new-repo-creation-plan.md  2026-06-10-readme-update-plan.md  2026-06-10-visual-showcase-enhancement-plan.md
docs/superpowers/specs/: 2026-06-04-scpworldvisual-design.md  2026-06-10-new-repo-creation-design.md  2026-06-10-readme-update-design.md  2026-06-10-visual-showcase-enhancement-design.md
frontend/: Dockerfile  README.md  nginx.conf  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
(+18 files in other folders)
